--- a/JSK_LION.css
+++ b/JSK_LION.css
@@ -24,7 +24,7 @@ body {
   text-align: center;
   border-bottom: 2px solid lightgray;
   position: sticky;
-  padding: 8px;
+  padding: 10px;
 }
 .header:before {
   content: url(LDH_LION_img/close.png);
@@ -97,7 +97,7 @@ a.btn4:before {
 }
 
 .login_check {
-  padding: 5px;
+  padding: 14px 0px;
   text-align: center;
 }
 
@@ -128,6 +128,7 @@ a.btn4:before {
   justify-content: center;
   align-items: center;
   color: gray;
+  margin-top: 18px;
 }
 
 .login_sub p {
@@ -141,8 +142,9 @@ a.btn4:before {
 span.or-txt {
   display: block;
   text-align: center;
-  margin: 10px 0px;
-  padding: 10px;
+  margin-top: 3px;
+  margin-bottom: 8px;
+  padding: 10px 0px;
   position: relative;
   color: gray;
 }
@@ -164,4 +166,55 @@ span.or-txt:after {
   height: 1px;
   top: 20px;
   right: 0;
+}
+
+.hidden {
+  display: none;
+}
+
+.w-btn-blue {
+  background-color: #2f80ec;
+  color: white;
+}
+
+.w-btn {
+  margin: 0;
+  padding: 16px;
+
+  font-size: 30px;
+  font-weight: 400;
+  text-align: center;
+  text-decoration: none;
+
+  display: inline-block;
+  width: 100%;
+
+  border: none;
+  border-radius: 4px;
+}
+
+.w-btn:active,
+.w-btn:hover,
+.w-btn:focus {
+  outline: 0;
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.black-bg {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 5;
+  padding: 30px;
+}
+.white-bg {
+  background: white;
+  border-radius: 5px;
+  padding: 30px;
 }
